Lab 7/security_acct_2.tf
resource "aws_security_group" "VPC_A_SG_Acct_2" {
  name        = "VPC_A_SG"
  description = "Allow SSH, HTTPS, and ICMP inbound traffic"
  vpc_id      = aws_vpc.VPC_A_Acct_2.id
  provider    = aws.Account_2

  ingress {
    description = "SSH into VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS into VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "ICMP into VPC"
    from_port   = -1
    to_port     = -1
    protocol    = "ICMP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "VPC_A_SG_Acct_2"
  }
}
